# salty-polaris

./: .gitignore  README.md  notes.txt  notes2.txt  pyproject.toml
infra/psql/: add_port1.sh  add_schema.sh  drop_schema.sh  genesis.sh  obs.old  polaris_load_log.psql  polaris_observation.psql  polaris_port.psql  polaris_vessel.psql  polaris_visit.psql  polaris_visit.psql~  polaris_weekly.psql
sample/: 0563c0f7-11db-4975-af2b-6c51dff3a432.html  0563c0f7-11db-4975-af2b-6c51dff3a432.json  3f41fc4f-43aa-4e7a-b50c-d0a79c03b83b.html  3f41fc4f-43aa-4e7a-b50c-d0a79c03b83b.json  99940f20-9659-4806-8cdc-f13b40c41720.json  ed7e60f3-9f11-4f70-8259-6ec8e64526c9.html  fresh.tgz  notes.txt
src/collection/: config.example  loader.py  polaris_app.py  ports.py  postgres.py  requirements.txt  sql_table.py  vessels.py
src/polaris_docker/: Dockerfile  config.example  config.yaml  f1  fresh_ports.txt  loader.py  notes.txt  polaris_app.py  ports.py  ports_groom.py  ports_insert.py  postgres.py  requirements.txt  sql_table.py  typescript  utility.py  vessels.py  visit.py  visits.py
src/salty_polaris/: __init__.py  __main__.py  scraper.py
tests/: test_scraper.py  test_vessel_parser.py
